Refactored how the values list is cached